# Raibowkonsole

./: BUILD.md  CMakeLists.txt  CMakePresets.json  README.md
doc/manual/: index.docbook
src/: CMakeLists.txt  ScrollState.h
src/autotests/: CMakeLists.txt  PartTest.cpp
src/characters/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/QuickCommands/: CMakeLists.txt
src/plugins/RandomColors/: CMakeLists.txt  konsole_randomcolors.in.json  randomcolorsplugin.cpp  randomcolorsplugin.h
src/plugins/SSHManager/: CMakeLists.txt
src/pluginsystem/: PluginManager.cpp
src/session/: SessionController.cpp
src/settings/: ConfigurationDialog.cpp  PluginSettings.cpp  PluginSettings.h  PluginSettings.ui  konsole.kcfg
src/terminalDisplay/: TerminalPainter.cpp
src/tests/: CMakeLists.txt
src/tests/demo_konsolepart/: CMakeLists.txt
src/tests/demo_konsolepart/src/: CMakeLists.txt
tools/uni2characterwidth/: CMakeLists.txt
